2012-07-04  6.7.8-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.8-1, SVN revision 8595.

2012-07-02  6.7.8-1 Cristy  <quetzlzacatenango@image...>
  * A single argument -stereo option now works as documented (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21348).
  * The -separate option returns channels as linear grayscale.
  * Remove the sRGB color profile when converting to grayscale (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=21355).

2012-06-29  6.7.8-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.8-0, SVN revision 8554.

2012-06-28  6.8.0-0 Cristy  <quetzlzacatenango@image...>
  * Increase epsilon value, smallest difference between two points (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=15870).

2012-06-28  6.7.7-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.7-10, SVN revision 8534.

2012-06-26  6.7.7-10 Glenn Randers-Pehrson <glennrp@image...>
  * Don't attempt to use Z_RLE compression strategy with old zlib (prior to
    zlib-1.2.0) that does not support it.
  * Increase PLTE chunk length to accommodate background color in indexed PNG
    (reference www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=21288).
  * Added png:PLTE.number_colors to verbose output

2012-06-25  6.7.7-10 Cristy  <quetzlzacatenango@image...>
  * Permit linear RGB for PNM and TIFF image formats.
  * Fix conflicting types for 'GenerateDifferentialNoise' (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21286).
  * Fix cast to pointer from integer of different size (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21286).
  * Fix broken MSL profile tag (reference
    http://www.imagemagick.org/discourse-server/viewforum.php?f=9).
  * Better recognition of a CMYK PDF.

2012-06-24  6.7.7-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.7-9, SVN revision 8460.
